The first exploits, cheats, and commands were implemented.